# Aleksandar

./: README.md
rgb_frontend/: app.py  app.py.save
rgb_frontend/static/: manifest.json  script.js  style.css
rgb_frontend/templates/: index.html  workspace.code-workspace
rgb_led/: CMakeLists.txt  rgb_led.c  rgb_led.pio
rgb_remote/: CMakeLists.txt  rgb_remote.c  rgb_remote.pio
test1/: app.py
